--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "user_genrator",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "it is library to genrate dummy users for test of mongo db",
   "main": "index.js",
   "type": "module",
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/RajBhut/user_genrator#readme",
   "dependencies": {
-    "faker": "^6.6.6",
+    "@faker-js/faker": "^8.4.1",
+    "faker": "^5.5.3",
     "mongoose": "^8.5.2"
   }
 }
